[tool.poetry]
name = "harambot"
version = "0.5.2.post2"
description = "A Yahoo Fantasy Sports bot for Discord"
authors = ["DMcP89 <davemcpherson@wochstudios.com>"]
license = "MIT"
readme = "README.md"
homepage = "http://harambot.io"
repository = "https://github.com/DMcP89/harambot"
keywords = [
    "yahoo",
    "yahoo fantasy sports",
    "fantasy football",
    "fantasy basketball",
    "fantasy baseball",
    "fantasy hockey",
    "discord",
    "bot"
]

include = [
    "LICENSE.md",
    "assests"
]

packages = [
    {include = "harambot"},
]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.5.2"
dynaconf = "^3.2.10"
peewee = "^3.17.9"
cachetools = "^5.5.2"
psycopg2 = "^2.9.10"
mysqlclient = "^2.2.7"
yahoo-oauth = "^2.1.1"
cryptography = "^44.0.2"
yahoo-fantasy-api = "^2.11.0"
aiohttp = "3.12.14"
urllib3 = "2.6.3"
requests = "2.32.4"



[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
black = ">=22.10,<25.0"
jedi = "^0.19.1"

[tool.poetry.scripts]
harambot = "harambot.bot:run"
harambot_reports = "harambot.services.reports:report_service"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths =["tests"]

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
